RealtimeVideoSource::adaptVideoSample should not create IOSurfaces when running in WebProcess https://bugs.webkit.org/show_bug.cgi?id=236011 <rdar://88367968>

Reviewed by Eric Carlson.

Source/WebCore:

Add a way to not use IOSurfaces when using ImageTransferSessionVT.
Use this in RealtimeVideoSource to toggle IOSurface use on and off when downsampling samples.

Covered by existing tests.

* platform/graphics/cv/CVUtilities.h:
* platform/graphics/cv/CVUtilities.mm:
* platform/graphics/cv/ImageTransferSessionVT.h:
* platform/graphics/cv/ImageTransferSessionVT.mm:
* platform/mediastream/RealtimeVideoSource.cpp:
* platform/mediastream/RealtimeVideoSource.h:

Source/WebKit:

Disable IOSurface use for WebProcess RealtimeVideoSources.

* WebProcess/cocoa/UserMediaCaptureManager.cpp:



Canonical link: https://commits.webkit.org/246683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288954 268f45cc-cd09-0410-ab3c-d52691b4dbfc